build: 🔖 Finalize v0.3.0 release